--- a/index.html
+++ b/index.html
@@ -170,7 +170,25 @@
         </div>
     </aside>
 
-    <script src="./main.js"></script>
+    <section class="main-container">
+        <div class="cards-container">
 
+            <!-- <div class="product-card">
+                <img src="https://images.pexels.com/photos/165754/pexels-photo-165754.jpeg?auto=compress&cs=tinysrgb&w=400" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Amanecer en el mar</p>
+                    </div>
+                    <figure>
+                        <img src="./icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div> -->
+
+        </div>
+    </section>
+
+    <script src="./main.js"></script>
 </body>
 </html>
