--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </nav>
 
-    <aside class="product-detail inactive">
+    <aside id="shoppingCartContainer" class="inactive">
         <div class="tittle-container">
             <img src="./icons/flechita.svg" alt="arrow">
             <p class="tittle">My order</p>
@@ -170,9 +170,24 @@
         </div>
     </aside>
 
+    <aside id="productDetail" class="inactive">
+        <div class="product-detail-close">
+            <img src="./icons/icon_close.png" alt="close">
+        </div>
+        <img src="https://images.pexels.com/photos/3889728/pexels-photo-3889728.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Amanecer">
+        <div class="product-info">
+            <p>$120.00</p>
+            <p>Amanecer</p>
+            <p>Amanecer en Capadocia... Una experiencia increible!! Para disfrutar desde nuestras terrazas la salida de globos en primera fila. Lo esperamos!</p>
+            <button class="primary-button add-to-cart-button">
+                <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+                Add to cart
+            </button>
+        </div>
+    </aside>
+
     <section class="main-container">
         <div class="cards-container">
-
             <!-- <div class="product-card">
                 <img src="https://images.pexels.com/photos/165754/pexels-photo-165754.jpeg?auto=compress&cs=tinysrgb&w=400" alt="">
                 <div class="product-info">
@@ -185,7 +200,6 @@
                     </figure>
                 </div>
             </div> -->
-
         </div>
     </section>
 
