Modificación de productos 2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="/">Relojes</a>
                 </li>
                 <li>
-                    <a href="/">Nootebooks</a>
+                    <a href="/">Notebooks</a>
                 </li>
                 <li>
                     <a href="/">Electroics</a>
